# DataAnalysis

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  run_components_demo.py  tmpclaude-6ff2-cwd
.claude/: settings.local.json
.claude/commands/: push.md
.streamlit/: config.toml
DataAnalysis_docs/: DataAnalysis_PRD.md  Format danych.txt  Profil projektu.txt  Struktura katalogów aplikacji.txt  Struktura katalogów projektu.txt  customers_shifts.yml
DataAnalysis_docs/dataanalysis_repo/: README.md  requirements.txt
DataAnalysis_docs/dataanalysis_repo/analytics/: analytics.py
DataAnalysis_docs/dataanalysis_repo/ingest/: ingest.py
DataAnalysis_docs/dataanalysis_repo/reporting/: reporting.py
DataAnalysis_docs/dataanalysis_repo/ui/: app.py
DataAnalysis_docs/dataanalysis_repo/validation/: validation.py
Dev/: FASTAPI_MIGRATION_STATUS.md  FRAMEWORK_MIGRATION_ANALYSIS.md  GITHUB_ISSUES_WORKFLOW.md  PERFORMANCE_PLAN.md  REFACTORING_REVIEW.md  Refaktoryzacja architektury.docx  STORAGE_PLANNING_MODULE.md  UI_Audit_Prompt_For_Claude.md  UI_Audit_Report.md  UI_COLOR_BUTTONS_PLAN.md  UI_MODERNIZATION_PLAN.md  UI_NAVIGATION_PLAN.md  changelog.md  kontekst.md  plan.md  task.md
api/: database.py  dependencies.py  main.py  pdf_generator.py  seed.py
api/models/: __init__.py  analysis_run.py  carrier.py  upload_staging.py  user.py
api/routers/: analyze.py  auth.py  carriers.py  reports.py  runs.py
api/schemas/: analysis.py  auth.py  carriers.py  runs.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.ts  carriers.ts  client.ts  runs.ts
src/: __init__.py
src/analytics/: __init__.py  capacity.py  duckdb_runner.py  performance.py  shifts.py
src/core/: __init__.py  carriers.py  carriers.yml  config.py  dimension_checker.py  formatting.py  mapping_history.yml  paths.py  types.py
src/ingest/: __init__.py  cleaning.py  mapping.py  mapping_history.py  pipeline.py  readers.py  sku_normalize.py  units.py
src/model/: __init__.py  masterdata.py  orders.py
src/quality/: __init__.py  dq_lists.py  dq_metrics.py  impute.py  pipeline.py  validators.py
src/reporting/: __init__.py  csv_writer.py  dq_reports.py  main_report.py  manifest.py  readme.py  zip_export.py
src/ui/: __init__.py  app.py  insights.py  layout.py  theme.py
streamlit_logs/: logs-lokatytrzmielu-dataanalysis-main-src-ui-app.py-2026-02-01T20_20_46.426Z.txt
tests/: test_analytics.py  test_ingest.py  test_integration.py  test_model.py  test_quality.py  test_reporting.py  test_ui.py
tests/fixtures/: MD_Kardex_gotowy.xlsx  __init__.py  carriers.yml  generate_fixtures.py  masterdata_clean.csv  masterdata_dirty.csv  orders_clean.csv  orders_dirty.csv  shifts_base.yml  test_masterdata.xlsx
(+33 files in other folders)
